Add support for Docker Host
